# invoice-australia

./: .env.template  .gitignore  README.md  app.py  app_refactored.py  auth.py  company.py  config.py  env.example  extensions.py  gunicorn.conf.py  invoice-australia.service  invoices.db  models.py  pyproject.toml  requirements.txt  routes.py  run_dev.py  setup.cfg  stripe_integration.py  user.py  utils.py
.github/workflows/: deploy.yml
docs/: DEPLOYMENT.md  FIXES_SUMMARY.md  QUICK_START.md  REFACTORING_GUIDE.md  STRIPE_SETUP.md  database_migration_and_company_feature.md  reset_database.md
migrations/versions/: 27db208d8092_add_phone_address_gender_dob_to_user.py  3d8aee6337ce_add_advancedinvoice_and_.py  5f4ad6e967de_initial_migration.py
static/js/: main.js  profile.js
templates/: about.html  advanced_email_success.html  advanced_form.html  advanced_history.html  advanced_invoice.html  advanced_preview.html  base copy.html  base.html  contact.html  create_company.html  email.html  email_success.html  form.html  history.html  invoice.html  list_companies.html  premium.html  preview.html  profile.html  view_advanced_invoice.html  view_invoice.html
templates/errors/: 403.html  404.html  500.html
tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_basic.py  test_models.py  test_routes.py  test_utils.py
